Imputation: fixed peripheral_pulse

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -854,13 +854,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace na values imputation\n",
     "train_data.fillna({'temp_of_extremities': 'cool', \n",
-    "                   'peripheral pulse': 'reduced',\n",
+    "                   'peripheral_pulse': 'reduced',\n",
     "                   'mucous_membrane': 'pale_pink',\n",
     "                   'capillary_refill_time': 'less_3_sec',\n",
     "                   'pain': 'depressed',\n",
@@ -870,7 +870,7 @@
     "                   }, inplace=True)\n",
     "\n",
     "test_data.fillna({'temp_of_extremities': 'cool', \n",
-    "                   'peripheral pulse': 'reduced',\n",
+    "                   'peripheral_pulse': 'reduced',\n",
     "                   'mucous_membrane': 'pale_pink',\n",
     "                   'capillary_refill_time': 'less_3_sec',\n",
     "                   'pain': 'depressed',\n",
@@ -882,53 +882,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1235 entries, 0 to 1234\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   surgery                1235 non-null   object \n",
-      " 1   age                    1235 non-null   object \n",
-      " 2   hospital_number        1235 non-null   object \n",
-      " 3   rectal_temp            1235 non-null   float64\n",
-      " 4   pulse                  1235 non-null   float64\n",
-      " 5   respiratory_rate       1235 non-null   float64\n",
-      " 6   temp_of_extremities    1235 non-null   object \n",
-      " 7   peripheral_pulse       1175 non-null   object \n",
-      " 8   mucous_membrane        1235 non-null   object \n",
-      " 9   capillary_refill_time  1235 non-null   object \n",
-      " 10  pain                   1235 non-null   object \n",
-      " 11  peristalsis            1235 non-null   object \n",
-      " 12  abdominal_distention   1000 non-null   object \n",
-      " 13  nasogastric_tube       1235 non-null   object \n",
-      " 14  nasogastric_reflux     1235 non-null   object \n",
-      " 15  nasogastric_reflux_ph  1235 non-null   float64\n",
-      " 16  rectal_exam_feces      1045 non-null   object \n",
-      " 17  abdomen                1022 non-null   object \n",
-      " 18  packed_cell_volume     1235 non-null   float64\n",
-      " 19  total_protein          1235 non-null   float64\n",
-      " 20  abdomo_appearance      1187 non-null   object \n",
-      " 21  abdomo_protein         1235 non-null   float64\n",
-      " 22  surgical_lesion        1235 non-null   object \n",
-      " 23  lesion_1               1235 non-null   float64\n",
-      " 24  lesion_2               1235 non-null   float64\n",
-      " 25  lesion_3               1235 non-null   float64\n",
-      " 26  cp_data                1235 non-null   object \n",
-      " 27  outcome                1235 non-null   object \n",
-      "dtypes: float64(10), object(18)\n",
-      "memory usage: 270.3+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>surgery</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hospital_number</th>\n",
+       "      <th>temp_of_extremities</th>\n",
+       "      <th>peripheral_pulse</th>\n",
+       "      <th>mucous_membrane</th>\n",
+       "      <th>capillary_refill_time</th>\n",
+       "      <th>pain</th>\n",
+       "      <th>peristalsis</th>\n",
+       "      <th>abdominal_distention</th>\n",
+       "      <th>nasogastric_tube</th>\n",
+       "      <th>nasogastric_reflux</th>\n",
+       "      <th>rectal_exam_feces</th>\n",
+       "      <th>abdomen</th>\n",
+       "      <th>abdomo_appearance</th>\n",
+       "      <th>surgical_lesion</th>\n",
+       "      <th>cp_data</th>\n",
+       "      <th>outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>1187</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>255</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>529461</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>pale_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
+       "      <td>depressed</td>\n",
+       "      <td>hypomotile</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>slight</td>\n",
+       "      <td>more_1_liter</td>\n",
+       "      <td>absent</td>\n",
+       "      <td>distend_small</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>lived</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>887</td>\n",
+       "      <td>1160</td>\n",
+       "      <td>46</td>\n",
+       "      <td>739</td>\n",
+       "      <td>784</td>\n",
+       "      <td>305</td>\n",
+       "      <td>840</td>\n",
+       "      <td>473</td>\n",
+       "      <td>684</td>\n",
+       "      <td>543</td>\n",
+       "      <td>1113</td>\n",
+       "      <td>956</td>\n",
+       "      <td>493</td>\n",
+       "      <td>482</td>\n",
+       "      <td>570</td>\n",
+       "      <td>929</td>\n",
+       "      <td>668</td>\n",
+       "      <td>574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       surgery    age  hospital_number temp_of_extremities peripheral_pulse  \\\n",
+       "count     1235   1235             1235                1235             1235   \n",
+       "unique       2      2              255                   4                4   \n",
+       "top        yes  adult           529461                cool          reduced   \n",
+       "freq       887   1160               46                 739              784   \n",
+       "\n",
+       "       mucous_membrane capillary_refill_time       pain peristalsis  \\\n",
+       "count             1235                  1235       1235        1235   \n",
+       "unique               6                     3          6           5   \n",
+       "top          pale_pink            less_3_sec  depressed  hypomotile   \n",
+       "freq               305                   840        473         684   \n",
+       "\n",
+       "       abdominal_distention nasogastric_tube nasogastric_reflux  \\\n",
+       "count                  1000             1235               1235   \n",
+       "unique                    3                2                  3   \n",
+       "top                moderate           slight       more_1_liter   \n",
+       "freq                    543             1113                956   \n",
+       "\n",
+       "       rectal_exam_feces        abdomen abdomo_appearance surgical_lesion  \\\n",
+       "count               1045           1022              1187            1235   \n",
+       "unique                 5              5                 3               2   \n",
+       "top               absent  distend_small     serosanguious             yes   \n",
+       "freq                 493            482               570             929   \n",
+       "\n",
+       "       cp_data outcome  \n",
+       "count     1235    1235  \n",
+       "unique       2       3  \n",
+       "top        yes   lived  \n",
+       "freq       668     574  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data.info()"
+    "train_data.describe(include=['O'])"
    ]
   }
  ],
