--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -843,6 +843,7 @@
     "- peristalsis - replace value: hypomotile\n",
     "- nasogastric_tube - replace value: slight\n",
     "- nasogastric_reflux - replace value: more_1_liter\n",
+    "- abdomo_apperance - replace value: serosanguious\n",
     "\n",
     "This will need to be filled by other means\n",
     "\n",
@@ -867,6 +868,7 @@
     "                   'peristalsis': 'hypomotile',\n",
     "                   'nasogastric_tube': 'slight',\n",
     "                   'nasogastric_reflux': 'more_1_liter',\n",
+    "                   'abdomo_appearance': 'serosanguious',\n",
     "                   }, inplace=True)\n",
     "\n",
     "test_data.fillna({'temp_of_extremities': 'cool', \n",
@@ -877,6 +879,7 @@
     "                   'peristalsis': 'hypomotile',\n",
     "                   'nasogastric_tube': 'slight',\n",
     "                   'nasogastric_reflux': 'more_1_liter',\n",
+    "                   'abdomo_appearance': 'serosanguious',\n",
     "                   }, inplace=True)"
    ]
   },
@@ -943,7 +946,7 @@
        "      <td>1235</td>\n",
        "      <td>1045</td>\n",
        "      <td>1022</td>\n",
-       "      <td>1187</td>\n",
+       "      <td>1235</td>\n",
        "      <td>1235</td>\n",
        "      <td>1235</td>\n",
        "      <td>1235</td>\n",
@@ -1006,7 +1009,7 @@
        "      <td>956</td>\n",
        "      <td>493</td>\n",
        "      <td>482</td>\n",
-       "      <td>570</td>\n",
+       "      <td>618</td>\n",
        "      <td>929</td>\n",
        "      <td>668</td>\n",
        "      <td>574</td>\n",
@@ -1035,10 +1038,10 @@
        "freq                    543             1113                956   \n",
        "\n",
        "       rectal_exam_feces        abdomen abdomo_appearance surgical_lesion  \\\n",
-       "count               1045           1022              1187            1235   \n",
+       "count               1045           1022              1235            1235   \n",
        "unique                 5              5                 3               2   \n",
        "top               absent  distend_small     serosanguious             yes   \n",
-       "freq                 493            482               570             929   \n",
+       "freq                 493            482               618             929   \n",
        "\n",
        "       cp_data outcome  \n",
        "count     1235    1235  \n",
