--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -849,8 +849,7 @@
     "\n",
     "- abdominal_distention\n",
     "- rectal_exam_feces\n",
-    "- abdomen\n",
-    "- abdomo_apperance"
+    "- abdomen"
    ]
   },
   {
