Dropna method, however yeilded inproper results

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -1057,6 +1057,35 @@
    "source": [
     "train_data.describe(include=['O'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThe following could be used to drop the remaining rows with NaN data\\n\\ntrain_data.dropna(inplace=True)\\ntrain_data.shape\\n\\nHowever this results in a shape of (755,28) meaning 480 rows are dropped, \\nand in this case that is far to many to achieve accurate results\\n\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "The following could be used to drop the remaining rows with NaN data\n",
+    "\n",
+    "train_data.dropna(inplace=True)\n",
+    "train_data.shape\n",
+    "\n",
+    "However this results in a shape of (755,28) meaning 480 rows are dropped, \n",
+    "and in this case that is far to many to achieve accurate results\n",
+    "\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
