--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "dtype: int64>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "freq       668     574  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "freq       668     574  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
        "'\\nThe following could be used to drop the remaining rows with NaN data\\n\\ntrain_data.dropna(inplace=True)\\ntrain_data.shape\\n\\nHowever this results in a shape of (755,28) meaning 480 rows are dropped, \\nand in this case that is far to many to achieve accurate results\\n\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,6 +1085,365 @@
     "and in this case that is far to many to achieve accurate results\n",
     "\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>surgery</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hospital_number</th>\n",
+       "      <th>temp_of_extremities</th>\n",
+       "      <th>peripheral_pulse</th>\n",
+       "      <th>mucous_membrane</th>\n",
+       "      <th>capillary_refill_time</th>\n",
+       "      <th>pain</th>\n",
+       "      <th>peristalsis</th>\n",
+       "      <th>abdominal_distention</th>\n",
+       "      <th>nasogastric_tube</th>\n",
+       "      <th>nasogastric_reflux</th>\n",
+       "      <th>rectal_exam_feces</th>\n",
+       "      <th>abdomen</th>\n",
+       "      <th>abdomo_appearance</th>\n",
+       "      <th>surgical_lesion</th>\n",
+       "      <th>cp_data</th>\n",
+       "      <th>outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>255</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>529461</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>pale_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
+       "      <td>depressed</td>\n",
+       "      <td>hypomotile</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>slight</td>\n",
+       "      <td>more_1_liter</td>\n",
+       "      <td>absent</td>\n",
+       "      <td>distend_small</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>lived</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>887</td>\n",
+       "      <td>1160</td>\n",
+       "      <td>46</td>\n",
+       "      <td>739</td>\n",
+       "      <td>784</td>\n",
+       "      <td>305</td>\n",
+       "      <td>840</td>\n",
+       "      <td>473</td>\n",
+       "      <td>684</td>\n",
+       "      <td>662</td>\n",
+       "      <td>1113</td>\n",
+       "      <td>956</td>\n",
+       "      <td>584</td>\n",
+       "      <td>574</td>\n",
+       "      <td>618</td>\n",
+       "      <td>929</td>\n",
+       "      <td>668</td>\n",
+       "      <td>574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       surgery    age  hospital_number temp_of_extremities peripheral_pulse  \\\n",
+       "count     1235   1235             1235                1235             1235   \n",
+       "unique       2      2              255                   4                4   \n",
+       "top        yes  adult           529461                cool          reduced   \n",
+       "freq       887   1160               46                 739              784   \n",
+       "\n",
+       "       mucous_membrane capillary_refill_time       pain peristalsis  \\\n",
+       "count             1235                  1235       1235        1235   \n",
+       "unique               6                     3          6           5   \n",
+       "top          pale_pink            less_3_sec  depressed  hypomotile   \n",
+       "freq               305                   840        473         684   \n",
+       "\n",
+       "       abdominal_distention nasogastric_tube nasogastric_reflux  \\\n",
+       "count                  1235             1235               1235   \n",
+       "unique                    3                2                  3   \n",
+       "top                moderate           slight       more_1_liter   \n",
+       "freq                    662             1113                956   \n",
+       "\n",
+       "       rectal_exam_feces        abdomen abdomo_appearance surgical_lesion  \\\n",
+       "count               1235           1235              1235            1235   \n",
+       "unique                 5              5                 3               2   \n",
+       "top               absent  distend_small     serosanguious             yes   \n",
+       "freq                 584            574               618             929   \n",
+       "\n",
+       "       cp_data outcome  \n",
+       "count     1235    1235  \n",
+       "unique       2       3  \n",
+       "top        yes   lived  \n",
+       "freq       668     574  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using ffill method - this method will fill any NA values with the result of the one which recurred previously\n",
+    "\n",
+    "train_data['abdomen'] = train_data['abdomen'].fillna(method='ffill')\n",
+    "train_data['rectal_exam_feces'] = train_data['rectal_exam_feces'].fillna(method='ffill')\n",
+    "train_data['abdominal_distention'] = train_data['abdominal_distention'].fillna(method='ffill')\n",
+    "\n",
+    "train_data.describe(include=['O'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>surgery</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hospital_number</th>\n",
+       "      <th>temp_of_extremities</th>\n",
+       "      <th>peripheral_pulse</th>\n",
+       "      <th>mucous_membrane</th>\n",
+       "      <th>capillary_refill_time</th>\n",
+       "      <th>pain</th>\n",
+       "      <th>peristalsis</th>\n",
+       "      <th>abdominal_distention</th>\n",
+       "      <th>nasogastric_tube</th>\n",
+       "      <th>nasogastric_reflux</th>\n",
+       "      <th>rectal_exam_feces</th>\n",
+       "      <th>abdomen</th>\n",
+       "      <th>abdomo_appearance</th>\n",
+       "      <th>surgical_lesion</th>\n",
+       "      <th>cp_data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "      <td>824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>210</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>529461</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>pale_cyanotic</td>\n",
+       "      <td>less_3_sec</td>\n",
+       "      <td>depressed</td>\n",
+       "      <td>hypomotile</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>slight</td>\n",
+       "      <td>more_1_liter</td>\n",
+       "      <td>absent</td>\n",
+       "      <td>distend_small</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>589</td>\n",
+       "      <td>782</td>\n",
+       "      <td>35</td>\n",
+       "      <td>507</td>\n",
+       "      <td>525</td>\n",
+       "      <td>212</td>\n",
+       "      <td>530</td>\n",
+       "      <td>339</td>\n",
+       "      <td>466</td>\n",
+       "      <td>437</td>\n",
+       "      <td>749</td>\n",
+       "      <td>612</td>\n",
+       "      <td>401</td>\n",
+       "      <td>375</td>\n",
+       "      <td>418</td>\n",
+       "      <td>619</td>\n",
+       "      <td>440</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       surgery    age  hospital_number temp_of_extremities peripheral_pulse  \\\n",
+       "count      824    824              824                 824              824   \n",
+       "unique       2      2              210                   4                4   \n",
+       "top        yes  adult           529461                cool          reduced   \n",
+       "freq       589    782               35                 507              525   \n",
+       "\n",
+       "       mucous_membrane capillary_refill_time       pain peristalsis  \\\n",
+       "count              824                   824        824         824   \n",
+       "unique               6                     3          6           4   \n",
+       "top      pale_cyanotic            less_3_sec  depressed  hypomotile   \n",
+       "freq               212                   530        339         466   \n",
+       "\n",
+       "       abdominal_distention nasogastric_tube nasogastric_reflux  \\\n",
+       "count                   824              824                824   \n",
+       "unique                    3                2                  2   \n",
+       "top                moderate           slight       more_1_liter   \n",
+       "freq                    437              749                612   \n",
+       "\n",
+       "       rectal_exam_feces        abdomen abdomo_appearance surgical_lesion  \\\n",
+       "count                824            824               824             824   \n",
+       "unique                 4              5                 3               2   \n",
+       "top               absent  distend_small     serosanguious             yes   \n",
+       "freq                 401            375               418             619   \n",
+       "\n",
+       "       cp_data  \n",
+       "count      824  \n",
+       "unique       2  \n",
+       "top        yes  \n",
+       "freq       440  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using ffill method for test data\n",
+    "\n",
+    "test_data['abdomen'] = test_data['abdomen'].fillna(method='ffill')\n",
+    "test_data['rectal_exam_feces'] = test_data['rectal_exam_feces'].fillna(method='ffill')\n",
+    "test_data['abdominal_distention'] = test_data['abdominal_distention'].fillna(method='ffill')\n",
+    "\n",
+    "test_data.describe(include=['O'])"
    ]
   }
  ],
