Replacing missing columns

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "dtype: int64>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "freq       668     574  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "freq       668     574  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
        "'\\nThe following could be used to drop the remaining rows with NaN data\\n\\ntrain_data.dropna(inplace=True)\\ntrain_data.shape\\n\\nHowever this results in a shape of (755,28) meaning 480 rows are dropped, \\nand in this case that is far to many to achieve accurate results\\n\\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "freq       668     574  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
        "freq       440  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2165,6 +2165,101 @@
     "The Train dataset is missing pain_moderate.\n",
     "\n",
     "I can assume thn that as they are missing they resulted in Null Values, with this in mind they can be added to the datasets with a value of '0' in its place to ensure data accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hospital_number\n",
+      "rectal_temp\n",
+      "pulse\n",
+      "respiratory_rate\n",
+      "nasogastric_reflux_ph\n",
+      "packed_cell_volume\n",
+      "total_protein\n",
+      "abdomo_protein\n",
+      "lesion_1\n",
+      "lesion_2\n",
+      "lesion_3\n",
+      "surgery_no\n",
+      "surgery_yes\n",
+      "age_adult\n",
+      "age_young\n",
+      "temp_of_extremities_cold\n",
+      "temp_of_extremities_cool\n",
+      "temp_of_extremities_normal\n",
+      "temp_of_extremities_warm\n",
+      "peripheral_pulse_absent\n",
+      "peripheral_pulse_increased\n",
+      "peripheral_pulse_normal\n",
+      "peripheral_pulse_reduced\n",
+      "mucous_membrane_bright_pink\n",
+      "mucous_membrane_bright_red\n",
+      "mucous_membrane_dark_cyanotic\n",
+      "mucous_membrane_normal_pink\n",
+      "mucous_membrane_pale_cyanotic\n",
+      "mucous_membrane_pale_pink\n",
+      "capillary_refill_time_3\n",
+      "capillary_refill_time_less_3_sec\n",
+      "capillary_refill_time_more_3_sec\n",
+      "pain_alert\n",
+      "pain_depressed\n",
+      "pain_extreme_pain\n",
+      "pain_slight\n",
+      "pain_mild_pain\n",
+      "pain_moderate\n",
+      "pain_severe_pain\n",
+      "peristalsis_absent\n",
+      "peristalsis_distend_small\n",
+      "peristalsis_hypermotile\n",
+      "peristalsis_hypomotile\n",
+      "peristalsis_normal\n",
+      "abdominal_distention_moderate\n",
+      "abdominal_distention_severe\n",
+      "abdominal_distention_slight\n",
+      "nasogastric_tube_significant\n",
+      "nasogastric_tube_slight\n",
+      "nasogastric_reflux_less_1_liter\n",
+      "nasogastric_reflux_slight\n",
+      "nasogastric_reflux_more_1_liter\n",
+      "rectal_exam_feces_absent\n",
+      "rectal_exam_feces_decreased\n",
+      "rectal_exam_feces_serosanguious\n",
+      "rectal_exam_feces_increased\n",
+      "rectal_exam_feces_normal\n",
+      "abdomen_distend_large\n",
+      "abdomen_distend_small\n",
+      "abdomen_firm\n",
+      "abdomen_normal\n",
+      "abdomen_other\n",
+      "abdomo_appearance_clear\n",
+      "abdomo_appearance_cloudy\n",
+      "abdomo_appearance_serosanguious\n",
+      "surgical_lesion_no\n",
+      "surgical_lesion_yes\n",
+      "cp_data_no\n",
+      "cp_data_yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adds missing columns \n",
+    "\n",
+    "enc_train_data.insert(37, \"pain_moderate\", 0)\n",
+    "\n",
+    "enc_test_data.insert(35, \"pain_slight\", 0)\n",
+    "enc_test_data.insert(40, \"peristalsis_distend_small\", 0)\n",
+    "enc_test_data.insert(50, \"nasogastric_reflux_slight\", 0)\n",
+    "enc_test_data.insert(54, \"rectal_exam_feces_serosanguious\", 0)\n",
+    "\n",
+    "for col in enc_test_data:\n",
+    "    print(col)"
    ]
   }
  ],
