Replacing missing columns

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2256,10 +2256,7 @@
     "enc_test_data.insert(35, \"pain_slight\", 0)\n",
     "enc_test_data.insert(40, \"peristalsis_distend_small\", 0)\n",
     "enc_test_data.insert(50, \"nasogastric_reflux_slight\", 0)\n",
-    "enc_test_data.insert(54, \"rectal_exam_feces_serosanguious\", 0)\n",
-    "\n",
-    "for col in enc_test_data:\n",
-    "    print(col)"
+    "enc_test_data.insert(54, \"rectal_exam_feces_serosanguious\", 0)\n"
    ]
   }
  ],
