Comment out column iterations as not needed atm

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2066,10 +2066,10 @@
     }
    ],
    "source": [
-    "# iterate train data\n",
+    "# iterate train data, Uncomment to acces\n",
     "\n",
-    "for col in enc_train_data:\n",
-    "    print(col)"
+    "#for col in enc_train_data:\n",
+    "#    print(col)"
    ]
   },
   {
@@ -2150,10 +2150,10 @@
     }
    ],
    "source": [
-    "# iterate test data\n",
+    "# iterate test data, Uncomment to acces\n",
     "\n",
-    "for col in enc_test_data:\n",
-    "    print(col)"
+    "#for col in enc_test_data:\n",
+    "#    print(col)"
    ]
   },
   {
